// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic function 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "azurerm_application_insights": {
      "ApplicationInsights": {
        "application_type": "web",
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "application-insights",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "workspace_id": "\${azurerm_log_analytics_workspace.LogAnalyticsWorkspace.id}",
      },
    },
    "azurerm_linux_function_app": {
      "Function_042596DC": {
        "app_settings": {
          "FUNCTIONS_WORKER_RUNTIME": "node",
          "WEBSITE_RUN_FROM_PACKAGE": "https://\${azurerm_storage_account.StorageAccount.name}.blob.core.windows.net/\${azurerm_storage_container.Function_FunctionBucket_0F705EF9.name}/\${azurerm_storage_blob.Function_CodeBlob_8A9705C9.name}",
        },
        "https_only": true,
        "identity": {
          "type": "SystemAssigned",
        },
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "function-c852aba6",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "service_plan_id": "\${azurerm_service_plan.ServicePlan.id}",
        "site_config": {
          "application_insights_connection_string": "\${azurerm_application_insights.ApplicationInsights.connection_string}",
          "application_insights_key": "\${azurerm_application_insights.ApplicationInsights.instrumentation_key}",
          "application_stack": {
            "node_version": "18",
          },
        },
        "storage_account_access_key": "\${azurerm_storage_account.StorageAccount.primary_access_key}",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
      },
    },
    "azurerm_log_analytics_workspace": {
      "LogAnalyticsWorkspace": {
        "location": "East US",
        "name": "Default-c82bf964",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
      },
    },
    "azurerm_resource_group": {
      "ResourceGroup": {
        "location": "East US",
        "name": "Default-c82bf964",
      },
    },
    "azurerm_role_assignment": {
      "Function_ReadLambdaCodeAssignment_75049D5E": {
        "principal_id": "\${azurerm_linux_function_app.Function_042596DC.identity[0].principal_id}",
        "role_definition_name": "Storage Blob Data Reader",
        "scope": "\${azurerm_storage_account.StorageAccount.id}",
      },
    },
    "azurerm_service_plan": {
      "ServicePlan": {
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "Default-c82bf964",
        "os_type": "Linux",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "sku_name": "Y1",
      },
    },
    "azurerm_storage_account": {
      "StorageAccount": {
        "account_replication_type": "LRS",
        "account_tier": "Standard",
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "defaultc82bf964",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
      },
    },
    "azurerm_storage_blob": {
      "Function_CodeBlob_8A9705C9": {
        "name": "function-c852aba6.zip",
        "source": "<source>",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
        "storage_container_name": "\${azurerm_storage_container.Function_FunctionBucket_0F705EF9.name}",
        "type": "Block",
      },
    },
    "azurerm_storage_container": {
      "Function_FunctionBucket_0F705EF9": {
        "container_access_type": "private",
        "name": "functionbucket-c8ccf7e8",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
      },
    },
  },
}
`;

exports[`basic function 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "ApplicationInsights": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "ApplicationInsights",
                "path": "root/Default/ApplicationInsights",
              },
              "Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.17.0",
                    },
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CodeBlob": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "CodeBlob",
                    "path": "root/Default/Function/CodeBlob",
                  },
                  "Function": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Function",
                    "path": "root/Default/Function/Function",
                  },
                  "FunctionBucket": {
                    "children": {
                      "Bucket": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "Bucket",
                        "path": "root/Default/Function/FunctionBucket/Bucket",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.2.70",
                    },
                    "display": {
                      "description": "A cloud object store",
                      "title": "Bucket",
                    },
                    "id": "FunctionBucket",
                    "path": "root/Default/Function/FunctionBucket",
                  },
                  "ReadLambdaCodeAssignment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "ReadLambdaCodeAssignment",
                    "path": "root/Default/Function/ReadLambdaCodeAssignment",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "LogAnalyticsWorkspace": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "LogAnalyticsWorkspace",
                "path": "root/Default/LogAnalyticsWorkspace",
              },
              "ResourceGroup": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "ServicePlan": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "ServicePlan",
                "path": "root/Default/ServicePlan",
              },
              "StorageAccount": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "azure": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionIdentifiers": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionIdentifiers",
                    "path": "root/Default/cloud.TestRunner/TestFunctionIdentifiers",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with environment variables 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "azurerm_application_insights": {
      "ApplicationInsights": {
        "application_type": "web",
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "application-insights",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "workspace_id": "\${azurerm_log_analytics_workspace.LogAnalyticsWorkspace.id}",
      },
    },
    "azurerm_linux_function_app": {
      "Function_042596DC": {
        "app_settings": {
          "BOOM": "BAM",
          "FOO": "BAR",
          "FUNCTIONS_WORKER_RUNTIME": "node",
          "WEBSITE_RUN_FROM_PACKAGE": "https://\${azurerm_storage_account.StorageAccount.name}.blob.core.windows.net/\${azurerm_storage_container.Function_FunctionBucket_0F705EF9.name}/\${azurerm_storage_blob.Function_CodeBlob_8A9705C9.name}",
        },
        "https_only": true,
        "identity": {
          "type": "SystemAssigned",
        },
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "function-c852aba6",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "service_plan_id": "\${azurerm_service_plan.ServicePlan.id}",
        "site_config": {
          "application_insights_connection_string": "\${azurerm_application_insights.ApplicationInsights.connection_string}",
          "application_insights_key": "\${azurerm_application_insights.ApplicationInsights.instrumentation_key}",
          "application_stack": {
            "node_version": "18",
          },
        },
        "storage_account_access_key": "\${azurerm_storage_account.StorageAccount.primary_access_key}",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
      },
    },
    "azurerm_log_analytics_workspace": {
      "LogAnalyticsWorkspace": {
        "location": "East US",
        "name": "Default-c82bf964",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
      },
    },
    "azurerm_resource_group": {
      "ResourceGroup": {
        "location": "East US",
        "name": "Default-c82bf964",
      },
    },
    "azurerm_role_assignment": {
      "Function_ReadLambdaCodeAssignment_75049D5E": {
        "principal_id": "\${azurerm_linux_function_app.Function_042596DC.identity[0].principal_id}",
        "role_definition_name": "Storage Blob Data Reader",
        "scope": "\${azurerm_storage_account.StorageAccount.id}",
      },
    },
    "azurerm_service_plan": {
      "ServicePlan": {
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "Default-c82bf964",
        "os_type": "Linux",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "sku_name": "Y1",
      },
    },
    "azurerm_storage_account": {
      "StorageAccount": {
        "account_replication_type": "LRS",
        "account_tier": "Standard",
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "defaultc82bf964",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
      },
    },
    "azurerm_storage_blob": {
      "Function_CodeBlob_8A9705C9": {
        "name": "function-c852aba6.zip",
        "source": "<source>",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
        "storage_container_name": "\${azurerm_storage_container.Function_FunctionBucket_0F705EF9.name}",
        "type": "Block",
      },
    },
    "azurerm_storage_container": {
      "Function_FunctionBucket_0F705EF9": {
        "container_access_type": "private",
        "name": "functionbucket-c8ccf7e8",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
      },
    },
  },
}
`;

exports[`basic function with environment variables 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "ApplicationInsights": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "ApplicationInsights",
                "path": "root/Default/ApplicationInsights",
              },
              "Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.17.0",
                    },
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CodeBlob": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "CodeBlob",
                    "path": "root/Default/Function/CodeBlob",
                  },
                  "Function": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Function",
                    "path": "root/Default/Function/Function",
                  },
                  "FunctionBucket": {
                    "children": {
                      "Bucket": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "Bucket",
                        "path": "root/Default/Function/FunctionBucket/Bucket",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.2.70",
                    },
                    "display": {
                      "description": "A cloud object store",
                      "title": "Bucket",
                    },
                    "id": "FunctionBucket",
                    "path": "root/Default/Function/FunctionBucket",
                  },
                  "ReadLambdaCodeAssignment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "ReadLambdaCodeAssignment",
                    "path": "root/Default/Function/ReadLambdaCodeAssignment",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "LogAnalyticsWorkspace": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "LogAnalyticsWorkspace",
                "path": "root/Default/LogAnalyticsWorkspace",
              },
              "ResourceGroup": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "ServicePlan": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "ServicePlan",
                "path": "root/Default/ServicePlan",
              },
              "StorageAccount": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "azure": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionIdentifiers": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionIdentifiers",
                    "path": "root/Default/cloud.TestRunner/TestFunctionIdentifiers",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`replace invalid character from function name 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "azurerm_application_insights": {
      "ApplicationInsights": {
        "application_type": "web",
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "application-insights",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "workspace_id": "\${azurerm_log_analytics_workspace.LogAnalyticsWorkspace.id}",
      },
    },
    "azurerm_linux_function_app": {
      "someFunction01_Function_83CF4008": {
        "app_settings": {
          "FUNCTIONS_WORKER_RUNTIME": "node",
          "WEBSITE_RUN_FROM_PACKAGE": "https://\${azurerm_storage_account.StorageAccount.name}.blob.core.windows.net/\${azurerm_storage_container.someFunction01_FunctionBucket_BDC04946.name}/\${azurerm_storage_blob.someFunction01_CodeBlob_D6CD3DCE.name}",
        },
        "https_only": true,
        "identity": {
          "type": "SystemAssigned",
        },
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "somefunction01-c8eb4882",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "service_plan_id": "\${azurerm_service_plan.ServicePlan.id}",
        "site_config": {
          "application_insights_connection_string": "\${azurerm_application_insights.ApplicationInsights.connection_string}",
          "application_insights_key": "\${azurerm_application_insights.ApplicationInsights.instrumentation_key}",
          "application_stack": {
            "node_version": "18",
          },
        },
        "storage_account_access_key": "\${azurerm_storage_account.StorageAccount.primary_access_key}",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
      },
    },
    "azurerm_log_analytics_workspace": {
      "LogAnalyticsWorkspace": {
        "location": "East US",
        "name": "Default-c82bf964",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
      },
    },
    "azurerm_resource_group": {
      "ResourceGroup": {
        "location": "East US",
        "name": "Default-c82bf964",
      },
    },
    "azurerm_role_assignment": {
      "someFunction01_ReadLambdaCodeAssignment_639B8FD1": {
        "principal_id": "\${azurerm_linux_function_app.someFunction01_Function_83CF4008.identity[0].principal_id}",
        "role_definition_name": "Storage Blob Data Reader",
        "scope": "\${azurerm_storage_account.StorageAccount.id}",
      },
    },
    "azurerm_service_plan": {
      "ServicePlan": {
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "Default-c82bf964",
        "os_type": "Linux",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "sku_name": "Y1",
      },
    },
    "azurerm_storage_account": {
      "StorageAccount": {
        "account_replication_type": "LRS",
        "account_tier": "Standard",
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "defaultc82bf964",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
      },
    },
    "azurerm_storage_blob": {
      "someFunction01_CodeBlob_D6CD3DCE": {
        "name": "somefunction01-c8eb4882.zip",
        "source": "<source>",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
        "storage_container_name": "\${azurerm_storage_container.someFunction01_FunctionBucket_BDC04946.name}",
        "type": "Block",
      },
    },
    "azurerm_storage_container": {
      "someFunction01_FunctionBucket_BDC04946": {
        "container_access_type": "private",
        "name": "functionbucket-c84280f4",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
      },
    },
  },
}
`;

exports[`replace invalid character from function name 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "ApplicationInsights": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "ApplicationInsights",
                "path": "root/Default/ApplicationInsights",
              },
              "LogAnalyticsWorkspace": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "LogAnalyticsWorkspace",
                "path": "root/Default/LogAnalyticsWorkspace",
              },
              "ResourceGroup": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "ServicePlan": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "ServicePlan",
                "path": "root/Default/ServicePlan",
              },
              "StorageAccount": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "azure": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionIdentifiers": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionIdentifiers",
                    "path": "root/Default/cloud.TestRunner/TestFunctionIdentifiers",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
              "someFunction01": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.17.0",
                    },
                    "id": "Asset",
                    "path": "root/Default/someFunction01/Asset",
                  },
                  "CodeBlob": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "CodeBlob",
                    "path": "root/Default/someFunction01/CodeBlob",
                  },
                  "Function": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Function",
                    "path": "root/Default/someFunction01/Function",
                  },
                  "FunctionBucket": {
                    "children": {
                      "Bucket": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "Bucket",
                        "path": "root/Default/someFunction01/FunctionBucket/Bucket",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.2.70",
                    },
                    "display": {
                      "description": "A cloud object store",
                      "title": "Bucket",
                    },
                    "id": "FunctionBucket",
                    "path": "root/Default/someFunction01/FunctionBucket",
                  },
                  "ReadLambdaCodeAssignment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "ReadLambdaCodeAssignment",
                    "path": "root/Default/someFunction01/ReadLambdaCodeAssignment",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "someFunction01",
                "path": "root/Default/someFunction01",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
